--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="Frederico (2).JPG" alt="Imagem de Frederico Canoeira" width="200px"> 
 <p> <em>Olá!</em></p>
 <p> <h1>Meu nome é Frederico Canoeira</h1></p>
- <p>Sou apaixonado por arte, literatura, tecnologia e pela Natureza.
+ <p>Sou apaixonado por arte, tecnologia e pela Natureza.
  De nacionalidade Angolana, actualmente vivendo em Angola na cidade de Luanda, uma cidade litorânea  super movimentada e acolhedora, estudande de desenvolvimento web <strong>Full-Stack</strong> pela <a href="https://www.betrybe.com/" target="_blank"> <strong>Trybe</strong> ,</a>  lugar onde mais que profissionais, preparam seres humanos do futuro no presente, mais que colegas e formadores lá existem parceiros para vida toda sem aquela toxicidade que é normal nos dias de hoje em todos os lugares.</p>
  
  Meu <a href="https://www.linkedin.com/in/fredericocanoeira/">linkedin</a> 
