adiciona habilidades e blogs

--- a/index.html
+++ b/index.html
@@ -4,16 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frederico Canoeira Portfólio</title>
+    <style>
+       
+
+    </style>
 </head>
 
 <body>
 <img src="Frederico (2).JPG" alt="Imagem de Frederico Canoeira" width="200px"> 
 <p> <em>Olá!</em></p>
 <p> <h1>Meu nome é Frederico Canoeira</h1></p>
- <p>Sou apaixonado por arte, tecnologia e pela Natureza.
- De nacionalidade Angolana, actualmente vivendo em Angola na cidade de Luanda, uma cidade litorânea  super movimentada e acolhedora, estudande de desenvolvimento web <strong>Full-Stack</strong> pela <a href="https://www.betrybe.com/" target="_blank"> <strong>Trybe</strong> ,</a>  lugar onde mais que profissionais, preparam seres humanos do futuro no presente, mais que colegas e formadores lá existem parceiros para vida toda sem aquela toxicidade que é normal nos dias de hoje em todos os lugares.</p>
+ <p>Sou apaixonado por tecnologia, natureza, arte e por saber o porquê das coisas.
+ De nacionalidade Angolana, actualmente vivendo em Angola, na cidade de Luanda, estudande de desenvolvimento web <strong>Full-Stack</strong> pela <a href="https://www.betrybe.com/" target="_blank"> <strong>Trybe</strong> ,</a>  lugar onde mais do que profissionais, preparam seres humanos para um futuro no presente, capazes de fazer frente a demanda do mercado tecnologico, com o uso de O que é Metodologia Activa de aprendizagem,conectando suas pessoas estudantes a toda uma rede de proissionais que catapultam uns aos outros.</p>
+
+<h2>Minhas habilidades</h2>
+<ul>
+    <li>   </li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
  
- Meu <a href="https://www.linkedin.com/in/fredericocanoeira/">linkedin</a> 
+
+<h2>Alguns Blogs que gosto de ler</h2>
+<ul> 
+    <li><a href="https://quora.com" target="_blank">Quora.com</a></li>
+ </ul>
+
+ <h2>Contatos </h2>
+ <p><a href="https://www.linkedin.com/in/fredericocanoeira/" target="_blank" >linkedin</a></p> 
 
 </body>
 </html>
